--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Equis Nova</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
       --bg-color: #0A0F2C; /* deep navy */
@@ -43,6 +44,13 @@
       margin-top: 10px;
     }
 
+    p.coming-soon {
+      font-size: 16px;
+      color: var(--muted-color);
+      margin-top: 40px;
+      font-style: italic;
+    }
+
     footer {
       position: absolute;
       bottom: 20px;
@@ -52,8 +60,9 @@
   </style>
 </head>
 <body>
-  <img src="./equis_nova_logo.png" alt="Equis Nova Logo" class="logo">
+  <img src="equis_nova_logo.png" alt="Equis Nova Logo" class="logo">
   <p class="tagline">Explore. Accelerate. Evolve.</p>
+  <p class="coming-soon">Coming soon</p>
   <footer>&copy; 2025 Equis Nova</footer>
 </body>
 </html>
