--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-  <img src="equis_nova_logo.png" alt="Equis Nova Logo" class="logo">
+  <img src="./equis_nova_logo.png" alt="Equis Nova Logo" class="logo">
   <p class="tagline">Explore. Accelerate. Evolve.</p>
   <p class="coming-soon">Coming soon</p>
   <footer>&copy; 2025 Equis Nova</footer>
