--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
-      --bg-color: #0A0F2C; /* deep navy */
+      --bg-color: #0A0F1C;
       --text-color: #ffffff;
       --accent-color: #00C2D1; /* electric blue */
       --muted-color: #CCCCCC;
@@ -27,7 +27,7 @@
     }
 
     img.logo {
-      width: 120px;
+      width: 180px;
       height: auto;
       margin-bottom: 20px;
     }
