--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
-      --bg-color: #0A0F1C;
+      --bg-color: #020a19;
       --text-color: #ffffff;
       --accent-color: #00C2D1; /* electric blue */
       --muted-color: #CCCCCC;
