--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Equis Nova</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="equisnova_favicon.png">
   <style>
     :root {
       --bg-color: #020a19;
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/equisnova/equisnova.github.io/dc93841e0757e354bfc89dcc257c97a1604aec9c/equis_nova_logo.png" alt="Equis Nova Logo" class="logo">
+  <img src="equisnova_logo.png" alt="Equis Nova Logo" class="logo">
   <p class="tagline">Explore. Accelerate. Evolve.</p>
   <p class="coming-soon">Coming soon</p>
   <footer>&copy; 2025 Equis Nova</footer>
