--- a/index.html
+++ b/index.html
@@ -40,15 +40,8 @@
 
     p.tagline {
       font-size: 20px;
-      color: var(--muted-color);
+      color: rgba(204, 204, 204, 0.6); /* same as var(--muted-color) but 60% opacity */
       margin-top: 10px;
-    }
-
-    p.coming-soon {
-      font-size: 16px;
-      color: var(--muted-color);
-      margin-top: 40px;
-      font-style: italic;
     }
 
     footer {
@@ -62,7 +55,6 @@
 <body>
   <img src="equisnova_logo.png" alt="Equis Nova Logo" class="logo">
   <p class="tagline">Explore. Accelerate. Evolve.</p>
-  <p class="coming-soon">Coming soon</p>
   <footer>&copy; 2025 Equis Nova</footer>
 </body>
 </html>
