--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     footer {
       position: absolute;
       bottom: 20px;
-      font-size: 14px;
-      color: var(--muted-color);
+      font-size: 10px;
+      color: rgba(204, 204, 204, 0.6); /* same as var(--muted-color) but 60% opacity */
     }
   </style>
 </head>
