--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
 <body>
   <img src="equisnova_logo.png" alt="Equis Nova Logo" class="logo">
   <p class="tagline">Explore. Accelerate. Evolve.</p>
-  <footer>&copy; 2025 Equis Nova</footer>
+  <footer>&copy; 2025 Equis Nova SAS</footer>
 </body>
 </html>
